--- a/package.json
+++ b/package.json
@@ -1,45 +1,79 @@
 {
-  "name": "auto-complete",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@nextui-org/react": "^1.0.0-beta.10",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.8",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "axios": "^1.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+ "name": "auto-complete",
+ "version": "0.1.0",
+ "private": true,
+ "dependencies": {
+  "@nextui-org/react": "^1.0.0-beta.10",
+  "@testing-library/jest-dom": "^5.16.5",
+  "@testing-library/react": "^13.4.0",
+  "@testing-library/user-event": "^13.5.0",
+  "@types/node": "^16.18.8",
+  "@types/react": "^18.0.26",
+  "@types/react-dom": "^18.0.9",
+  "axios": "^1.2.1",
+  "react": "^17.0.2",
+  "react-dom": "^17.0.2",
+  "react-scripts": "5.0.1",
+  "typescript": "^4.9.4",
+  "web-vitals": "^2.1.4"
+ },
+ "scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "TZ=Asia/Singapore react-scripts test",
+  "test:cov": "npm test -- --coverage --watchAll=false",
+  "eject": "react-scripts eject"
+ },
+ "eslintConfig": {
+  "extends": [
+   "react-app",
+   "react-app/jest"
+  ]
+ },
+ "browserslist": {
+  "production": [
+   ">0.2%",
+   "not dead",
+   "not op_mini all"
+  ],
+  "development": [
+   "last 1 chrome version",
+   "last 1 firefox version",
+   "last 1 safari version"
+  ]
+ },
+ "jest": {
+  "resetMocks": false,
+  "collectCoverageFrom": [
+   "src/**/*.ts",
+   "src/**/*.tsx",
+   "!src/styles/*",
+   "!src/theme.ts",
+   "!src/**/*.d.ts",
+   "!src/**/api.ts",
+   "!src/**/constants.ts",
+   "!src/serviceWorker.ts",
+   "!<rootDir>/node_modules/"
+  ],
+  "coveragePathIgnorePatterns": [],
+  "transformIgnorePatterns": [
+   "node_modules/(?!(swiper|ssr-window|dom7)).*\\.js$"
+  ],
+  "coverageThreshold": {
+   "global": {
+    "branches": 80,
+    "functions": 80,
+    "lines": 80,
+    "statements": 80
+   }
   }
+ },
+ "devDependencies": {
+  "@types/jest": "^29.2.4",
+  "@types/react-test-renderer": "^16.9.2",
+  "@testing-library/jest-dom": "^5.16.2",
+  "@testing-library/react": "^12.1.4",
+  "@testing-library/react-hooks": "^7.0.2",
+  "@testing-library/user-event": "^14.2.0"
+ }
 }
